2004-10-20  Carl Hetherington  <inkscape@carlh.net>

	* src/livarot/Path.cpp: fix for 1050379, and probably lots of
	others.

	* src/livarot/Path.h, src/livarot/PathOutline.cpp: bug fix for a
	previous commit.

2004-10-19  Carl Hetherington  <inkscape@carlh.net>

	* src/livarot/Path.h, src/livarot/PathSimplify.cpp: more
	simplification cleanups.

	* src/livarot/PathStroke.cpp: coding style cleanups.

	* src/livarot/Path.h, src/livarot/PathSimplify.cpp,
	src/livarot/PathStroke.cpp: more cleanups; don't modify Path::pts
	and Path::nbPt.

	* src/livarot/Path.cpp, src/livarot/Path.h,
	src/livarot/PathConversion.cpp, src/livarot/PathCutting.cpp,
	src/livarot/PathSimplify.cpp, src/livarot/PathStroke.cpp: use a
	std::vector for Path::pts.

2004-10-18  Carl Hetherington  <inkscape@carlh.net>

	* src/livarot/Path.h, src/livarot/PathSimplify.cpp: coding style
	and const cleanups.

	* src/livarot/PathSimplify.cpp: some very minor cleanups, and
	temporary comments for myself.

	* src/livarot/PathConversion.cpp: coding style cleanups.

	* src/livarot/PathConversion.cpp: fix for bug 1048827.

	* src/livarot/Path.h, src/livarot/PathSimplify.cpp: clean up
	simplification code. 

2004-10-17  MenTaLguY  <mental@rydia.net>

	* share/templates/Makefile.am, share/templates/layers.svg:
	  added a layer template 

	* src/widgets/layer-selector.h, src/widgets/layer-selector.cpp:
	  more layer selector work

	* src/util/filter-list.h, src/util/Makefile_insert: 
	  added filter_list()

2004-10-15  Carl Hetherington  <inkscape@carlh.net>

	* src/livarot/PathSimplify.cpp: remove #ifdef
	pseudo_douglas_pecker code that wasn't being used.

2004-10-15  MenTaLguY  <mental@rydia.net>

	* src/view.h: removed obsolete status message functions

	* src/attributes.h: remove unused #define

	* src/sp-object.cpp: fix for bug #1048268 (inkscape:collect being written
	  in "plain SVG" files)

	* src/sp-item.h, src/sp-item.cpp: added isLocked() and isHidden()
	  predicates
