@@ -6,6 +6,8 @@
 	* src/livarot/Path.h, src/livarot/PathOutline.cpp: bug fix for a
 	previous commit.
 
+	* src/livarot/Path.cpp: fix a memory leak.
+
 2004-10-19  Carl Hetherington  <inkscape@carlh.net>
 
 	* src/livarot/Path.h, src/livarot/PathSimplify.cpp: more
